--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="payment-buttons">
   <button onclick="Payment('PhonePe')"><img src="assets/PhonePe.png" alt="PhonePe" width="100"></button>
-  <button onclick="Payment('PayTM')"><img src="aassets/Paytm.png" alt="PayTM" width="100"></button>
+  <button onclick="Payment('PayTM')"><img src="assets/Paytm.png" alt="PayTM" width="100"></button>
   <button onclick="Payment('GPay')"><img src="assets/gpay.png" alt="GPay" width="100"></button>
 </div>
         
