--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- ✅ FIXED: Correct ID used -->
   <div id="virusScan">
     <video autoplay muted playsinline id="scanVideo">
-      <source src="assets/video.mp4" type="video/mp4">
+      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
     </video>
   </div>
 
