--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <!-- ✅ FIXED: Correct ID used -->
   <div id="virusScan">
-    <video autoplay muted playsinline id="scanVideo">
-      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-    </video>
-  </div>
+  <video id="scanVideo" autoplay muted playsinline>
+    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 
   <!-- ✅ scamAlert hidden initially -->
   <div id="scamAlert" class="hidden">
