--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- ✅ FIXED: Correct ID used -->
   <div id="virusScan">
   <video id="scanVideo" autoplay muted playsinline>
-    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    <source src="assets/video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
