--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-  <!-- ✅ FIXED: Correct ID used -->
-  <video id="scanVideo" autoplay muted playsinline loop>
-  <source src="assets/video.mp4" type="video/mp4">
-  <!-- Fallback for unsupported browsers -->
-  <source src="assets/video.webm" type="video/webm">
-  Your browser does not support HTML5 video.
-</video>
+ <div id="virusScan">
+    <video id="scanVideo" autoplay muted playsinline webkit-playsinline preload="auto">
+      <source src="assets/video.mp4" type="video/mp4">
+      <source src="assets/video.webm" type="video/webm">
+      Your browser does not support HTML5 video.
+    </video>
+  </div>
 
   <!-- ✅ scamAlert hidden initially -->
   <div id="scamAlert" class="hidden">
