--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Your browser does not support the video tag.
     </video>
     <!-- Fallback Image (hidden by default) -->
-    <img id="fallbackImage" src="assets/hot.jpg" alt="Warning" class="hidden">
+    <img id="fallbackImage" src="assets/warning_fallback.jpg" alt="Warning" class="hidden">
   </div>
 
 
