--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>Scan to pay via UPI</p>
     </div>
 
-    <div class="Payment-buttons">
+    <div class="payment-buttons">
       <button onclick="Payment('PhonePe')"><img src="assets/PhonePe.png" alt="PhonePe"></button>
       <button onclick="Payment('PayTM')"><img src="assets/Paytm.png" alt="PayTM"></button>
       <button onclick="Payment('GPay')"><img src="assets/gpay.png" alt="GPay"></button>
